# turbine-predictive-maintenance

./: .gitignore  README.md  app.py  main.py  pyproject.toml  turbine_friendly.py  turbine_theme.py
.streamlit/: config.toml
app_data/: engine_evidence.parquet  test_quantiles.parquet
app_data/work_orders/: unit_100.json  unit_100.md  unit_12.json  unit_12.md  unit_18.json  unit_18.md  unit_24.json  unit_24.md  unit_27.json  unit_27.md  unit_30.json  unit_30.md  unit_34.json  unit_34.md  unit_37.json  unit_37.md  unit_42.json  unit_42.md  unit_43.json  unit_43.md  unit_46.json  unit_46.md  unit_47.json  unit_47.md  unit_48.json  unit_48.md  unit_49.json  unit_49.md  unit_5.json  unit_5.md  unit_52.json  unit_52.md  unit_56.json  unit_56.md  unit_58.json  unit_58.md  unit_6.json  unit_6.md  unit_68.json  unit_68.md  (+18 more)
docs_corpus/: failure_modes.md  maintenance_procedures.md  sensor_map.md
models/: baseline_fd001.json  baseline_lgbm_fd001.txt  copilot_eval.json  fd004_results.json  judge_agreement.json  judge_summary.json  operating_point_fd001.json  tcn_ensemble_fd001.json  tcn_fd001.json  tcn_fd001.pt  tcn_fd001_seed42.pt  tcn_fd001_seed43.pt  tcn_fd001_seed44.pt  tcn_fd001_seed45.pt  tcn_fd001_seed46.pt  tcn_fd001_seeds.json  tcn_quantile_fd001.json  tcn_quantile_fd001.pt
runs/: eval_set.json  human_labels.jsonl  judgments.jsonl
scripts/: build_corpus.py  copilot.py  eval_copilot.py  eval_ensemble.py  explore_cmapss.py  judge_workorders.py  label_workorders.py  make_dataset.py  operating_point.py  run_fd004.py  train_baseline.py  train_quantile.py  train_tcn.py
