[project]
name = "turbine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=2.2.3",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.1",
    "torch>=2.13.0",
]
